destacados ajustes mobile v1.1

--- a/index.html
+++ b/index.html
@@ -121,14 +121,18 @@
 			<section id="destacados" class="anchoFullFlex">
 				<img src="assets/img/home_inicio/fondo_dark.webp" alt="Fondo de simulacion Oscuro" width="1600" height="1000">
 				<img class="clear" src="assets/img/home_inicio/fondo_clear.webp" alt="Fondo de simulacion Claro" width="1600" height="1000">
-				<img id="escenario" src="assets/img/home_inicio/fondo_oculto.webp" alt="Fondo de simulacion decoracion" width="1600" height="1000">
-				<img src="assets/img/home_inicio/fondo_silla.webp" alt="Fondo de simulacion Claro" width="1600" height="1000">
+				<!-- <img id="escenario" src="assets/img/home_inicio/fondo_oculto.webp" alt="Fondo de simulacion decoracion" width="1600" height="1000"> -->
+				<!-- <img src="assets/img/home_inicio/fondo_silla.webp" alt="Fondo de simulacion Claro" width="1600" height="1000"> -->
 				<div id="infoDestcadosGlobal">
 					<div id="destacadoMontajeBox">
 						<img class="cuadroGuiaH" src="assets/img/home_inicio/dm-cuadro_guia.webp" alt="cuadro guia" width="1112" height="1000">
 						<!-- <img class="montaje" src="" alt="muestra de montaje 1" width="1112" height="1000">
 						<img class="montaje anterior" src="" alt="muestra de montaje 2" width="1112" height="1000">
 						<img class="montaje siguiente" src="" alt="muestra de montaje 3" width="1112" height="1000"> -->
+					</div>
+					<div id="overDestacados">
+						<img id="escenario" src="assets/img/home_inicio/fondo_oculto.webp" alt="Fondo de simulacion decoracion" width="1600" height="1000">
+						<img src="assets/img/home_inicio/fondo_silla.webp" alt="Fondo de simulacion Claro" width="1600" height="1000">
 					</div>
 
 					<h1>Eso me gusta.mx</h1>
@@ -138,11 +142,6 @@
 							<i class="fa-solid fa-paint-roller"></i>
 						</div>
 						<div id="dark" class="controlTheme">
-							<span>Oscuro</span>
-							<div class="colorTheme"></div>
-						</div>
-						<div id="clear" class="controlTheme">
-							<span>Claro</span>
 							<div class="colorTheme"></div>
 						</div>
 					</div>
