--- a/index.html
+++ b/index.html
@@ -121,14 +121,9 @@
 			<section id="destacados" class="anchoFullFlex">
 				<img src="assets/img/home_inicio/fondo_dark.webp" alt="Fondo de simulacion Oscuro" width="1600" height="1000">
 				<img class="clear" src="assets/img/home_inicio/fondo_clear.webp" alt="Fondo de simulacion Claro" width="1600" height="1000">
-				<!-- <img id="escenario" src="assets/img/home_inicio/fondo_oculto.webp" alt="Fondo de simulacion decoracion" width="1600" height="1000"> -->
-				<!-- <img src="assets/img/home_inicio/fondo_silla.webp" alt="Fondo de simulacion Claro" width="1600" height="1000"> -->
 				<div id="infoDestcadosGlobal">
 					<div id="destacadoMontajeBox">
 						<img class="cuadroGuiaH" src="assets/img/home_inicio/dm-cuadro_guia.webp" alt="cuadro guia" width="1112" height="1000">
-						<!-- <img class="montaje" src="" alt="muestra de montaje 1" width="1112" height="1000">
-						<img class="montaje anterior" src="" alt="muestra de montaje 2" width="1112" height="1000">
-						<img class="montaje siguiente" src="" alt="muestra de montaje 3" width="1112" height="1000"> -->
 					</div>
 					<div id="overDestacados">
 						<img id="escenario" src="assets/img/home_inicio/fondo_oculto.webp" alt="Fondo de simulacion decoracion" width="1600" height="1000">
@@ -165,7 +160,6 @@
 							<div class="medidasGlobal">
 								<h4>Tamaños cm:</h4>
 								<ul id="medidas">
-									<!-- <li class="medida">h:<span class="resaltar">15</span> w:<span class="resaltar">8</span></li> -->
 								</ul>
 							</div>
 						</div>
@@ -173,10 +167,7 @@
 
 					<div id="destacadosArticulosGeneral">
 						<div id="destacadosArticulos">
-							<!-- <div class="articulo activo" data-sku="goku">
-								<img class="montaje" src="assets/img/home_inicio/ico-dm-geek-kakaroto-goku.webp" alt="articulo de montaje 1" width="60" height="60">
-								<div class="info">Goku Pasado y Presente</div>
-							</div> -->
+							
 						</div>
 						<div id="destacadosBotones">
 							<i id="btnMontajeBack" class="fa-solid fa-caret-left"></i>
@@ -185,10 +176,30 @@
 					</div>
 				</div>
 			</section>
-
-			
 		</header>
 		
+
+
+
+		<main class="container">
+			<section id="presentacion">
+				<h2><span class="laMarca">Eso me gusta</span> es una tienda de productos decorativos, regalos o personalizados. </h2>
+				<p>
+					Los Productos de <span class="laMarca">Eso me gusta</span>, son ideales como regalo para un evento o cumpleaños, tambien como articulos decorativos o tematicos que son ideales como parte del diseño de interiores o la decoracion de un espacio en tu hogar, pero tambien son perfectos para la decoracion de oficinas, despachos, recepciones, puntos de venta o cualquier negocio.
+				</p>
+				<h3>Personalizar tu producto es uno de los beneficios de <span class="laMarca">Eso me gusta</span>.</h3>
+				<p>
+					LLeva aun más alla todo lo que <span class="laMarca">Eso me gusta</span> tiene para ti, con su servicio de personalizacion y consigue un producto aun más impactante con mayor significado para ti creando un espacio original y unico, que te represente a ti o a tu marca.
+				</p>
+			</section>
+
+			<article id="boxCatgoriasProductos">
+				<h1>Recorte de vinil</h1>
+				<hr>
+
+				
+			</article>
+		</main>
 
 		
 
