--- a/index.html
+++ b/index.html
@@ -205,6 +205,49 @@
 
 
 		<footer id="footerDeveloper">
+			<div id="footerGeneral">
+				<div id="menuFooter">
+					<ul>
+						<li><a href="/quienes-somos">Quines somos</a></li>
+						<li><a href="/politicas-de-privacidad">Politicas de privacidad</a></li>
+						<li><a href="/terminos-y-condiciones">Terminos y condiciones</a></li>
+						<li><a href="/Puntos-de-venta">Puntos de venta</a></li>
+						<li><a href="/quiero-ser-parte">Quiero ser parte</a></li>
+						<li><a href="/anunciate-aqui">Anunciate aquí</a></li>
+					</ul>
+				</div>
+				<form id="footerForm">
+					<h2>Contacta con nosotros:</h2>
+
+					<div class="boxInput" data-validar="text">
+						<div class="inputEfect">
+							<input type="text" id="fNombre" name="fNombre" class="input" autocomplete="off" value="" placeholder="Nombre" required="" />
+							<div class="efectoLinea"></div>
+							<div class="iconoStatus"><i class="fa-solid fa-circle-check"></i></div>
+						</div>
+						<div class="inputError"></div>
+					</div>
+					<div class="boxInput" data-validar="mail">
+						<div class="inputEfect">
+							<input type="mail" id="fMail" name="fMail" class="input" autocomplete="off" value="" placeholder="Correo" required="" />
+							<div class="efectoLinea"></div>
+							<div class="iconoStatus"><i class="fa-solid fa-circle-check"></i></div>
+						</div>
+						<div class="inputError"></div>
+					</div>
+					<div class="boxInput" data-validar="richText">
+						<div class="inputEfect">
+							<textarea id="fMensaje" name="fMensaje" class="input" autocomplete="off" value="" placeholder="Mensaje" required="" rows="4"></textarea>
+							<div class="efectoLinea"></div>
+							<div class="iconoStatus"><i class="fa-solid fa-circle-check"></i></div>
+						</div>
+						<div class="inputError"></div>
+					</div>
+					<div class="btnSubmit">
+						<input id="btnFormFooter" type="submit" value="Enviar">
+					</div>
+				</form>
+			</div>
 			<div class="interno">
 				power by:
 				<a href="https://www.tiktok.com/@juan.palma" target="_blank" rel="noreferrer">
