actualizacion de certificados servidor

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 		<link rel="icon" href="favicon.ico?v1" />
 		<link rel="apple-touch-icon" href="apple-touch-icon.png" />
 				
-		<title>Eso me gusta | Tinda en linea</title>
+		<title>Eso me gusta | Articulos Kawai - Geek - Regalo - Decoración y más</title>
 		<meta name="description" content="Eso me gusta es una tienda de viniles, articulos decorativos, regalos, kawai, geek, otacu y divertidos para el hogar, decoracion de interiores, puntos de venta o negocios."></meta>
 
 		<!-- PWA APP Startup configuration -->
 		<link rel="manifest" href="manifest.webmanifest">
 		<!-- Fallback application metadata for legacy browsers -->
-		<meta name="application-name" content="TITULO">
+		<meta name="application-name" content="Eso me gusta">
 		<link rel="icon" sizes="16x16 32x32 48x48 64x64" href="favicon.ico?v1">
 		<link rel="icon" sizes="512x512" href="assets/img/icons/icono-app-512.png">
 		<meta name="theme-color" content="#0383db"/>
@@ -43,23 +43,23 @@
 			crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		
 		
-		<meta itemprop="name" content="Eso me gusta | Tinda en linea" />
+		<meta itemprop="name" content="Eso me gusta | Articulos Kawai - Geek - Regalo - Decoración y más" />
 		<meta itemprop="description" content="Eso me gusta es una tienda de viniles, articulos decorativos, regalos, kawai, geek, otacu y divertidos para el hogar, decoracion de interiores, puntos de venta o negocios." />
 		<meta itemprop="image" content="https://esomegusta.idalibre.com/assets/img/facebook_web_img_article.jpg" />
 		
 		<meta property="og:type" content="WEBSITE" />
 		<meta property="og:url" content="https://esomegusta.idalibre.com" />
-		<meta property="og:site_name" content="Eso me gusta | Tinda en linea" />
+		<meta property="og:site_name" content="Eso me gusta | Articulos Kawai - Geek - Regalo - Decoración y más" />
 		<meta property="fb:app_id" content="ID-FACEBOOK-APP" />
 				
-		<meta property="og:title" content="Eso me gusta | Tinda en linea" />
+		<meta property="og:title" content="Eso me gusta | Articulos Kawai - Geek - Regalo - Decoración y más" />
 		<meta property="og:description" content="Eso me gusta es una tienda de viniles, articulos decorativos, regalos, kawai, geek, otacu y divertidos para el hogar, decoracion de interiores, puntos de venta o negocios." />
 		<meta property="og:image" content="https://esomegusta.idalibre.com/assets/img/facebook_web_img_article.jpg" />
 		<meta property="og:image:type" content="image/jpeg" />
 		
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:site" content="@TU-USUARIO-TWITER" />
-		<meta name="twitter:title" content="Eso me gusta | Tinda en linea" />
+		<meta name="twitter:title" content="Eso me gusta | Articulos Kawai - Geek - Regalo - Decoración y más" />
 		<meta name="twitter:description" content="Eso me gusta es una tienda de viniles, articulos decorativos, regalos, kawai, geek, otacu y divertidos para el hogar, decoracion de interiores, puntos de venta o negocios." />
 		<meta name="twitter:image:src" content="https://esomegusta.idalibre.com/assets/img/facebook_web_img_article.jpg" />
 		<meta name="twitter:domain" content="esomegusta.idalibre.com" />
