extencion liga footer politicas

--- a/index.html
+++ b/index.html
@@ -293,12 +293,12 @@
 			<div id="footerGeneral">
 				<div id="menuFooter">
 					<ul>
-						<li><a href="/quienes-somos">Quines somos</a></li>
-						<li><a href="/politicas-de-privacidad">Politicas de privacidad</a></li>
-						<li><a href="/terminos-y-condiciones">Terminos y condiciones</a></li>
-						<li><a href="/Puntos-de-venta">Puntos de venta</a></li>
-						<li><a href="/quiero-ser-parte">Quiero ser parte</a></li>
-						<li><a href="/anunciate-aqui">Anunciate aquí</a></li>
+						<li><a href="/quienes-somos.html">Quines somos</a></li>
+						<li><a href="/politicas-de-privacidad.html">Politicas de privacidad</a></li>
+						<li><a href="/terminos-y-condiciones.html">Terminos y condiciones</a></li>
+						<li><a href="/Puntos-de-venta.html">Puntos de venta</a></li>
+						<li><a href="/quiero-ser-parte.html">Quiero ser parte</a></li>
+						<li><a href="/anunciate-aqui.html">Anunciate aquí</a></li>
 					</ul>
 				</div>
 				<form id="footerForm">
