config login facebook

--- a/index.html
+++ b/index.html
@@ -184,8 +184,7 @@
 							</div>
 							<div id="facebookLoginBox">
 								<fb:login-button 
-									scope="public_profile,email"
-									onlogin="checkLoginState();">
+									scope="public_profile,email">
 								</fb:login-button>
 							</div>
 						</div>
