config login facebook

--- a/index.html
+++ b/index.html
@@ -183,8 +183,7 @@
 								<div id="googleLogin"></div>
 							</div>
 							<div id="facebookLoginBox">
-								<fb:login-button 
-									scope="public_profile,email">
+								<fb:login-button scope="public_profile,email" size="large" use-continue-as="true" >
 								</fb:login-button>
 							</div>
 						</div>
