--- a/index.html
+++ b/index.html
@@ -183,8 +183,9 @@
 								<div id="googleLogin"></div>
 							</div>
 							<div id="facebookLoginBox">
-								<fb:login-button scope="public_profile,email" size="large" use-continue-as="true" >
-								</fb:login-button>
+								<!-- <fb:login-button scope="public_profile,email" size="large" use-continue-as="true" >
+								</fb:login-button> -->
+								<div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="true"></div>
 							</div>
 						</div>
 					</div>
