config login facebook

--- a/index.html
+++ b/index.html
@@ -183,9 +183,17 @@
 								<div id="googleLogin"></div>
 							</div>
 							<div id="facebookLoginBox">
-								<!-- <fb:login-button scope="public_profile,email" size="large" use-continue-as="true" >
-								</fb:login-button> -->
-								<div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="true"></div>
+								<fb:login-button
+									scope="public_profile,email"
+									size="large"
+									use-continue-as="true"
+									button-type="continue_with"
+									layout="default"
+									auto-logout-link="true"
+									use-continue-as="true"
+								>
+								</fb:login-button>
+								<!-- <div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="true"></div> -->
 							</div>
 						</div>
 					</div>
