config login facebook

--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
 									scope="public_profile,email"
 									size="large"
 									use-continue-as="true"
-									button-type="continue_with"
+									button-type="login_with"
 									layout="default"
-									auto-logout-link="true"
+									auto-logout-link="false"
 									use-continue-as="true"
 								>
 								</fb:login-button>
