config login facebook

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 							<div id="facebookLoginBox">
 								<fb:login-button
 									scope="public_profile,email"
-									size="small"
+									size="medium"
 									use-continue-as="true"
 									button-type="login_with"
 									layout="default"
