--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 								<div class="fb-login-button"
 									data-width=""
 									data-size="large"
-									data-button-type="continue_with"
+									data-button-type="login_with"
 									data-layout="default"
 									data-auto-logout-link="false"
 									data-use-continue-as="true">
