config login facebook

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 								<div id="googleLogin"></div>
 							</div>
 							<div id="facebookLoginBox">
-								<!-- <fb:login-button
+								<fb:login-button
 									scope="public_profile,email"
 									size="large"
 									use-continue-as="true"
@@ -192,15 +192,15 @@
 									auto-logout-link="false"
 									use-continue-as="true"
 								>
-								</fb:login-button> -->
-								<div class="fb-login-button"
+								</fb:login-button>
+								<!-- <div class="fb-login-button"
 									data-width=""
 									data-size="large"
 									data-button-type="login_with"
 									data-layout="default"
 									data-auto-logout-link="false"
 									data-use-continue-as="true">
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
