config login facebook

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 									scope="public_profile,email"
 									size="large"
 									use-continue-as="true"
-									button-type="login_with"
+									button-type="continue_with"
 									layout="default"
 									auto-logout-link="false"
 									use-continue-as="true"
