config login facebok

--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
 									layout="default"
 									auto-logout-link="false"
 									use-continue-as="true"
+									onlogin="checkLoginState();"
 								>
 								</fb:login-button>
 								<!-- <div class="fb-login-button"
