--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
 								<fb:login-button
 									scope="public_profile,email"
 									size="large"
+									width="260"
 									use-continue-as="true"
 									button-type="continue_with"
 									layout="default"
@@ -194,15 +195,10 @@
 									onlogin="checkLoginState();"
 								>
 								</fb:login-button>
-								<!-- <div class="fb-login-button"
-									data-width=""
-									data-size="large"
-									data-button-type="login_with"
-									data-layout="default"
-									data-auto-logout-link="false"
-									data-use-continue-as="true">
-								</div> -->
 							</div>
+							<!-- <div id="appleLoginBox">
+								<div id="appleid-signin" data-color="black" data-border="true" data-type="sign in"></div>
+							</div> -->
 						</div>
 					</div>
 					<ul id="menuBox">
